Prepare download zip file.

--- a/src/main/resources/templates/theme.html
+++ b/src/main/resources/templates/theme.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-
-<html lang="en" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml"
-      xmlns:th="http://www.w3.org/1999/xhtml">
-
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <title></title>
+    <title>Stopka [[${userDataDto.person}]]</title>
+    <meta charset="utf-8">
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <!--[if mso]><xml><o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch><o:AllowPNG/></o:OfficeDocumentSettings></xml><![endif]-->
     <style>
 		* {
 			box-sizing: border-box;
